# mcpfile

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  justfile  skill.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  publish.yml  release-please.yml  release.yml
src/: bridge.rs  config.rs  docker.rs  lib.rs  main.rs  piped_io.rs  secrets.rs  skill.rs
