[package]
name = "mcpfile"
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = "1"
bollard = "0.20"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "1"

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
